# simple-proxy

./: .cursorrules  .gitignore  .windsurfrules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DECAY.md  GEMINI.md  LICENSE  README.md  REVIEW.md  SKILLS.md  rust-toolchain.toml  simple-proxy.js
.agent/: schema.md  version.md
.githooks/: README.md
.github/: copilot-instructions.md
.github/hooks/: agent-memory-autosync.json  agent-memory-session.json
.github/workflows/: ci.yml
agent-skills/apply-critique/: SKILL.md
agent-skills/greeting/: SKILL.md
agent-skills/greeting/scripts/: greet.sh
agent-skills/hello-world/: SKILL.md
agent-skills/hello-world/scripts/: hello.sh
agent-skills/memory-lint/: SKILL.md
agent-skills/memory-lint/scripts/: memory-lint.mjs  test_memory_lint.mjs  (+1 more)
agent-skills/second-opinion/: SKILL.md
crates/event-bus/: Cargo.toml  README.md
crates/event-bus/examples/: event_bus_demo.rs  pipeline.rs
crates/event-bus/src/: lib.rs
examples/: event_bus_signaling.rs
files/: agent-memory-feedback.md
memory/: continuity.md  decay-policy.md  instructions.md  smoke-test.md  vision.md
memory/archive/: 2026-Q2.md  INDEX.md
memory/sessions/: 2026-06-13-175025.md  2026-06-13-181502.md  2026-06-13-182331.md  2026-06-15-044225.md  2026-06-15-050643.md  2026-06-15-162002.md  2026-06-15-163249.md  2026-06-15-165645.md  2026-06-15-170815.md  2026-06-15-171429.md  2026-06-15-172641.md  2026-06-15-181756.md  2026-06-15-183705.md  2026-06-15-190408.md  2026-06-16-160117.md  2026-06-16-170420.md  2026-06-16-182533.md  2026-06-16-182943.md  2026-06-16-184614.md  2026-06-16-185602.md  2026-06-16-190941.md  2026-06-16-194709.md  2026-06-20-004718.md  2026-06-24-162539.md  2026-06-24-170229.md  2026-06-24-170937.md  2026-06-24-171336.md  2026-06-24-184819.md  2026-06-24-190046.md  2026-06-24-201611.md  2026-06-24-203710.md
src/: allowlist.rs  cli.rs  config.rs  discovery.rs  lib.rs  log.rs  main.rs  observer.rs  proxy.rs  relay.rs  shutdown.rs
tests/: integration.rs
